<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.dicodingjetpackpro.moviecatalogue.presentation.favorite.FavoriteViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/scrollable_header_scene_favorite">

        <com.google.android.material.chip.ChipGroup
            android:background="?colorSurface"
            android:id="@+id/type_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/keyline_4"
            android:paddingTop="@dimen/keyline_2"
            android:paddingEnd="@dimen/keyline_4"
            android:paddingBottom="@dimen/keyline_2"
            app:checkedChip="@id/chip_movie"
            app:chipSpacing="@dimen/keyline_4"
            app:chipSpacingHorizontal="@dimen/keyline_4"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_movie"
                style="@style/Widget.MovieCatalogue.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tv_show"
                style="@style/Widget.MovieCatalogue.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_shows_label" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_favorite"
            style="@style/Widget.MovieCatalogue.ScrollBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:favoriteItems="@{viewmodel.favoriteList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_filter"
            tools:listitem="@layout/favorite_item_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/favorite_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleWhen="@{viewmodel.favoriteIsEmpty}"
            tools:text="No Favorite Movie yet" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>