...
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/movie_detail_label"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_detail"
                    app:navigationContentDescription="@string/abc_action_bar_up_description"
                    app:navigationIcon="?homeAsUpIndicator" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

...
                android:layout_marginBottom="@dimen/fab_min_height"
                app:movie="@{viewmodel.movie}" />

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_favorite"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/keyline_4"
            android:onClick="@{() -> viewmodel.editFavorite()}"
...
